--- a/WebApiPeliculas2024I/appsettings.json
+++ b/WebApiPeliculas2024I/appsettings.json
@@ -1,7 +1,8 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection" : "Server=localhost; Port=5432; User Id=postgres; Password=nada123; Database=peliculas2024I"
+    "DefaultConnection": "Server=localhost; Port=5432; User Id=postgres; Password=nada123; Database=peliculas2024I"
   },
+  "LlaveJWT": "d1V0o5oMeImKd53rYi4HmBgEG,jhvSDVJ)",
   "Logging": {
     "LogLevel": {
       "Default": "Information",
